# Ambulance-Simulator-System

./: .gitignore  CMakeLists.txt  EPQueue.h  Hospital.h  InputReader.h  NCQueue.cpp  NCQueue.h  NPQueue.cpp  NPQueue.h  Patient.cpp  README.md  SCQueue.cpp  SCQueue.h
InputFiles/Scenario 1/: Scenario 1 output.txt  Scienerio 1.txt
InputFiles/Scenario 2/: Scenario 2 input file.txt
InputFiles/Scenario 3/: Scenario 3 input file.txt  Scenario 3 output file.txt
InputFiles/Scenario 4/: Scenario 4 input file.txt  Scenario 4 output file.txt
include/: Car.h  Organizer.h  Out_Back.h  Patient.h  SPQueue.h
src/: Car.cpp  EPQueue.cpp  Hospital.cpp  InputReader.cpp  Organizer.cpp  Out_Back.cpp  SPQueue.cpp  main.cpp
